# django-real-estate

estate-src/: docker-compose.yml  pyproject.toml
estate-src/apps/common/: models.py
estate-src/apps/profiles/: admin.py  models.py  signals.py
estate-src/apps/profiles/migrations/: 0001_initial.py
estate-src/apps/ratings/: admin.py  models.py  serializers.py
estate-src/apps/ratings/migrations/: 0001_initial.py
estate-src/apps/users/: admin.py  forms.py  managers.py  models.py
estate-src/apps/users/migrations/: 0001_initial.py
estate-src/real_estate/: settings.py  urls.py
estate-src/real_estate/settings/: base.py
